; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cd-windows.c_SPTICDReadSectorFAD.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cd-windows.c_SPTICDReadSectorFAD.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64, i32, i64, i32 }

@cd_cs = common dso_local global i32 0, align 4
@cd_buf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SPTICDReadSectorFAD(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  br label %6

6:                                                ; preds = %24, %2
  %7 = call i32 @EnterCriticalSection(i32* @cd_cs)
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cd_buf, i32 0, i32 0), align 8
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %6
  %11 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cd_buf, i32 0, i32 1), align 8
  %12 = load i64, i64* %3, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %21

14:                                               ; preds = %10
  %15 = load i8*, i8** %4, align 8
  %16 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cd_buf, i32 0, i32 4), align 8
  %17 = call i32 @memcpy(i8* %15, i32 %16, i32 2352)
  %18 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cd_buf, i32 0, i32 2), align 8
  store i32 %18, i32* %5, align 4
  %19 = call i32 @LeaveCriticalSection(i32* @cd_cs)
  %20 = load i32, i32* %5, align 4
  ret i32 %20

21:                                               ; preds = %10
  %22 = load i64, i64* %3, align 8
  store i64 %22, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cd_buf, i32 0, i32 1), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cd_buf, i32 0, i32 3), align 8
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cd_buf, i32 0, i32 2), align 8
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cd_buf, i32 0, i32 0), align 8
  br label %23

23:                                               ; preds = %21
  br label %24

24:                                               ; preds = %23, %6
  %25 = call i32 @LeaveCriticalSection(i32* @cd_cs)
  %26 = call i32 (...) @SwitchToThread()
  br label %6
}

declare dso_local i32 @EnterCriticalSection(i32*) #1

declare dso_local i32 @memcpy(i8*, i32, i32) #1

declare dso_local i32 @LeaveCriticalSection(i32*) #1

declare dso_local i32 @SwitchToThread(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
